      "get npc usable", "set npc moves", "get npc moves" [Ralph]
    * "init mouse" no longer locks the mouse to the window
    * "read zone", "write zone", "zone at spot",
      "zone number of tiles" [Ralph]
    * "use item", "use item in slot" [James]
    * "map width" and "map height" now take an optional argument,
      the map number [Ralph]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * Test suite and benchmarks for RELOAD format [Mike]

Oct X 2010 [Ypsiliform+3]

  * Bugfixes
    * Bug 816: Freeze on attack instead-chaining on multi-stage chains
    * The "leader" command has never worked.
    * "set dead heroes gain experience" did nothing.
    * Bug 829: Shrinking a map could cause garbage map layers to appear;
      also, deleting map layers did not work
    * Script string literals were broken when playing games made in
      late 2006.
    * Bug 824: Back-compat issue with Curse of Vampire (affected other
      games) [James]
    * Cancel hero movement if hero speed is zero. Prevents a situation
      where walking a zero-speed hero could get stuck in an infinite
      battle loop [Ralph]
    * "wait for all" did not wait for NPCs when it was meant to [Ralph]
    * "hero pixel x/y" always returned the leader's position [Ralph]
    * Fix display of the airbrush options in the tile editor. [Ralph]
    * Music and sound effects can be previewed everywhere in
      Custom by hitting Enter [Ralph]
    * Prompt for confirmation before deleting a song or sound effect
      [James]
    * Under Unix you usually couldn't play unlumped .rpgdir games which
      were on a mounted filesystem other than the one containing your
      home directory [Ralph]
    * Sound effects did not stop when quitting to the title screen or
      loading a game [Ralph]

Feb 8 2010 [Ypsiliform+2]

  * Bugfixes
    * Bug 815: Trailblazers Frozen
    * Fix crash when saving an empty menu

Jan 24 2010 [Ypsiliform+1]

  * Bugfixes